--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -86,3 +86,109 @@ body{
     }
 }
 // button-block
+
+// Modal style
+.cstm-modal{
+    .modal-header{
+        border-bottom: 0px;
+    }
+    .modal-body{
+        .container-login{
+            box-shadow: none;
+        }
+    }
+}
+// Modal style
+
+// sidebar
+.sidebar-wrapper{
+    width: 330px;
+    height: 100%;
+    position: fixed;
+    background: #fff;
+    left: 0px;
+    top: 0px;
+    .logo-sidebar{
+        margin-top: 35px;
+        margin-left: 30px;
+    }
+    .menu-list{
+        margin: 0px;
+        padding: 0px;
+        list-style: none;
+        margin-top: 60px;
+        a{
+            color: #41404D;
+            font-weight: 600;
+            font-size: 18px;
+            position: relative;
+            padding-left: 40px;
+            height: 55px;
+            display: block;
+            line-height: 52px;
+            text-indent: 35px;
+            border-left: 8px solid #fff;
+            svg{
+                position: absolute;
+                left: 25px;
+                top: 12px;
+                path{
+                    fill: #41404D ;
+                }
+            }
+
+            &.active{
+                color: #650ADD;
+                background: #f5f5f5;
+                border-left-color: #650ADD;
+                svg{
+                    path{
+                        fill:#650ADD; 
+                    }
+                }
+            }
+
+            &:hover{
+                text-decoration: none;
+            }
+        }
+    }
+}
+// sidebar
+
+.wrapper{
+    background: #F5F5F5;
+    height: 100vh;
+    padding-left: 330px;
+    min-height: 500px;
+}
+
+// Navbar Cstm
+.navbar-cstm{
+    background: #fff;
+    min-height: 60px;
+}
+// Navbar Cstm
+
+.order-short-info{
+    font-size: 24px;
+    font-weight: 700;
+    padding-left: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 0px 10px 20px;
+    label{
+        color: #650ADD;
+        font-size: 28px;
+        margin: 0px 30px;
+        text-align: center;
+        font-weight: 500;
+        span{
+            font-size: 16px;
+            display: block;
+            line-height: 5px;
+            font-weight: 600;
+        }
+    }
+}
