--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -190,5 +190,8 @@ body{
             line-height: 5px;
             font-weight: 600;
         }
+        .new{
+            fill: #000;
+        }
     }
 }
