--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -168,6 +168,29 @@ body{
     background: #fff;
     min-height: 60px;
 }
+
+.tab-cstm{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px !important;
+    div.nav-item{
+        a{
+            color: #000;
+            font-size: 18px;
+            font-weight: 600;
+            text-transform: uppercase;
+            padding: 2px 20px !important;
+            &.active{
+                background:#24DFF7 ;
+                color: #000 !important;
+                border-radius: 20px;
+            }
+        }
+    }
+}
 // Navbar Cstm
 
 .order-short-info{
@@ -190,8 +213,57 @@ body{
             line-height: 5px;
             font-weight: 600;
         }
-        .new{
-            fill: #000;
+    }
+}
+
+.shadow-1{
+    box-shadow: 3.03333px 6.06667px 12.1333px rgba(0, 0, 0, 0.08);
+}
+
+.flex-area{
+    padding: 30px !important;
+}
+.ord-table{
+    width: 100%;
+    border-radius: 18px;
+    height: calc(100vh - 160px);
+    background: #fff;
+    overflow: auto;
+    padding: 20px;
+    table{
+        width: 100%;
+        color: #41404D;
+        td{
+            border-bottom: 1px solid #e6e6e6;
+            padding-bottom: 15px;
         }
     }
+    .ord-title{
+        font-size: 18px;
+        font-weight: 500;
+        span{
+            font-size: 13px;
+            display: block;
+            font-weight: 400;
+        }
+    }
+    .price{
+        font-size: 18px;
+        font-weight: 500;
+    }
+    .btn-detail{
+        background: linear-gradient(180deg, #24DFF7 0%, #1CBEC9 100%) !important;
+        color: #fff;
+        font-size: 11px !important;
+        height: 24px !important;
+        border: 0px !important;
+        border-radius: 20px !important;
+        padding: 0px 20px !important;
+    }
+}
+
+.order-detail{
+    background: #fff;
+    height: calc(100vh - 160px);
+    border-radius: 18px;
 }
