--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,6 +3,7 @@ body {
   background-color: #f5f5f5 !important;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
+  padding-top: 50px;
 }
 
 .container-login {
@@ -172,6 +173,12 @@ body {
 .navbar-cstm {
   background: #fff;
   min-height: 60px;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  padding-left: 330px;
 }
 
 .tab-cstm {
@@ -293,5 +300,185 @@ body {
   background: #fff;
   height: calc(100vh - 160px);
   border-radius: 18px;
+  padding-top: 15px;
+}
+
+.order-detail h3.order-title {
+  font-size: 21px;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+.order-detail .action-container {
+  text-align: center;
+}
+
+.order-detail .action-container .btn-snipe {
+  background: #650ADD;
+  color: #fff;
+  border-radius: 12px;
+  display: inline-block;
+  width: 80px;
+  height: 95px;
+  margin: 10px 15px;
+}
+
+.order-detail .action-container .btn-snipe .inner {
+  background: #570fb7;
+  width: 60px;
+  height: 60px;
+  border: 0px;
+  margin: 12px 4px 3px 4px;
+  border-radius: 8px;
+}
+
+.order-detail .action-container .btn-snipe span {
+  display: block;
+  font-size: 12px;
+}
+
+.order-detail .action-container .btn-express {
+  background: #37DBE4;
+  color: #fff;
+  border-radius: 12px;
+  display: inline-block;
+  width: 80px;
+  height: 95px;
+  margin: 10px 15px;
+}
+
+.order-detail .action-container .btn-express .inner {
+  background: #1ab9c1;
+  width: 60px;
+  height: 60px;
+  border: 0px;
+  margin: 12px 4px 3px 4px;
+  border-radius: 8px;
+}
+
+.order-detail .action-container .btn-express span {
+  display: block;
+  font-size: 12px;
+}
+
+.order-detail .action-container .btn-confirm {
+  background: #B30DFF;
+  color: #fff;
+  border-radius: 12px;
+  display: inline-block;
+  width: 80px;
+  height: 95px;
+  margin: 10px 15px;
+}
+
+.order-detail .action-container .btn-confirm .inner {
+  background: #8a15bf;
+  width: 60px;
+  height: 60px;
+  border: 0px;
+  margin: 12px 4px 3px 4px;
+  border-radius: 8px;
+}
+
+.order-detail .action-container .btn-confirm span {
+  display: block;
+  font-size: 12px;
+}
+
+.order-detail .action-container .btn-hold {
+  background: #EDEDED;
+  color: #fff;
+  border-radius: 12px;
+  display: inline-block;
+  width: 80px;
+  height: 95px;
+  margin: 10px 15px;
+}
+
+.order-detail .action-container .btn-hold .inner {
+  background: #bbbbbb;
+  width: 60px;
+  height: 60px;
+  border: 0px;
+  margin: 12px 4px 3px 4px;
+  border-radius: 8px;
+}
+
+.order-detail .action-container .btn-hold .inner svg {
+  opacity: 0.4;
+}
+
+.order-detail .action-container .btn-hold span {
+  display: block;
+  font-size: 12px;
+  color: #1A051D;
+  opacity: 0.3;
+}
+
+.order-ptable {
+  display: block;
+  padding: 15px;
+}
+
+.order-ptable table {
+  width: 100%;
+  vertical-align: top;
+}
+
+.order-ptable table td {
+  padding-bottom: 10px;
+  vertical-align: top;
+}
+
+.order-ptable table .item-quantity {
+  font-size: 14px;
+}
+
+.order-ptable table .item-name {
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-left: 7px;
+}
+
+.order-ptable table .item-name span {
+  font-size: 11px;
+  color: #262628;
+  opacity: 0.4;
+  display: block;
+  text-transform: capitalize;
+}
+
+.order-ptable table .item-price {
+  padding-left: 10px;
+}
+
+.order-ptable table .st-title {
+  background: #EDEDED;
+  padding: 4px 9px;
+  color: #949494;
+  font-size: 14px;
+}
+
+.order-ptable table .total-ptable {
+  width: 100%;
+}
+
+.order-ptable table .total-ptable tr td {
+  color: #AEA7AF;
+  font-size: 14px;
+}
+
+.order-ptable table .total-ptable tr.total {
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.order-ptable table .total-ptable tr.total td {
+  font-size: 18px;
+  border-top: 1px solid #EDEDED;
+  color: #000;
 }
 /*# sourceMappingURL=style.css.map */
