--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,6 +3,7 @@ body{
     background-color: #f5f5f5 !important;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    padding-top: 50px;
 }
 
 .container-login{
@@ -167,6 +168,12 @@ body{
 .navbar-cstm{
     background: #fff;
     min-height: 60px;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+    padding-left: 330px;
 }
 
 .tab-cstm{
@@ -266,4 +273,163 @@ body{
     background: #fff;
     height: calc(100vh - 160px);
     border-radius: 18px;
+    padding-top: 15px;
+    h3.order-title{
+        font-size: 21px;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 15px;
+    }
+    .action-container{
+        text-align: center;
+        .btn-snipe{
+            background: #650ADD;
+            color: #fff;
+            border-radius: 12px;
+            display: inline-block;
+            width: 80px;
+            height: 95px;
+            margin: 10px 15px;
+            .inner{
+                background: #570fb7;
+                width: 60px;
+                height: 60px;
+                border: 0px;
+                margin: 12px 4px 3px 4px;
+                border-radius: 8px;
+            }
+            span{
+                display: block;
+                font-size: 12px;
+            }
+        }
+        .btn-express{
+            background: #37DBE4;
+            color: #fff;
+            border-radius: 12px;
+            display: inline-block;
+            width: 80px;
+            height: 95px;
+            margin: 10px 15px;
+            .inner{
+                background: #1ab9c1;
+                width: 60px;
+                height: 60px;
+                border: 0px;
+                margin: 12px 4px 3px 4px;
+                border-radius: 8px;
+            }
+            span{
+                display: block;
+                font-size: 12px;
+            }
+        }
+        .btn-confirm{
+            background: #B30DFF;
+            color: #fff;
+            border-radius: 12px;
+            display: inline-block;
+            width: 80px;
+            height: 95px;
+            margin: 10px 15px;
+            .inner{
+                background: #8a15bf;
+                width: 60px;
+                height: 60px;
+                border: 0px;
+                margin: 12px 4px 3px 4px;
+                border-radius: 8px;
+            }
+            span{
+                display: block;
+                font-size: 12px;
+            }
+        }
+        .btn-hold{
+            background: #EDEDED;
+            color: #fff;
+            border-radius: 12px;
+            display: inline-block;
+            width: 80px;
+            height: 95px;
+            margin: 10px 15px;
+            .inner{
+                background: #bbbbbb;
+                width: 60px;
+                height: 60px;
+                border: 0px;
+                margin: 12px 4px 3px 4px;
+                border-radius: 8px;
+                svg{
+                    opacity: 0.4;
+                }
+            }
+            span{
+                display: block;
+                font-size: 12px;
+                color: #1A051D;
+                opacity: 0.3;
+            }
+        }
+    }
+}
+
+.order-ptable{
+    display: block;
+    padding: 15px;
+    table{
+        width: 100%;
+        vertical-align: top;
+        td{
+            padding-bottom: 10px;
+            vertical-align: top;
+        }
+        .item{
+            &-quantity{
+                font-size: 14px;
+            }
+            &-name{
+                font-size: 14px;
+                font-weight: 600;
+                text-transform: uppercase;
+                padding-left: 7px;
+                span{
+                    font-size: 11px;
+                    color:#262628;
+                    opacity: 0.4;
+                    display: block;
+                    text-transform: capitalize;
+                }
+            }
+            &-price{
+                padding-left: 10px;
+            }
+        }
+        .st-title{
+            background: #EDEDED;
+            padding: 4px 9px;
+            color: #949494;
+            font-size: 14px;
+        }
+        .total-ptable{
+            width: 100%;
+            tr{
+                td{
+                    color: #AEA7AF;
+                    font-size: 14px;
+                }
+                &.total{
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    td{
+                       font-size: 18px;
+                       border-top: 1px solid #EDEDED; 
+                       color: #000;
+                    }
+                }
+            }
+            
+        }
+    }
 }
