--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -57,7 +57,7 @@ body {
 .container-login .ls-panel .help-txt {
   font-size: 11px;
   color: #262628;
-  opacity: 40%;
+  opacity: 0.4;
   font-weight: 500;
   margin-top: -7px;
   margin-bottom: 15px;
@@ -94,6 +94,7 @@ body {
   display: block;
   font-weight: 500 !important;
   border: 0px !important;
+  margin: 0px auto;
 }
 
 .cstm-modal .modal-header {
@@ -212,7 +213,7 @@ body {
   padding: 0px !important;
   height: 60px;
   padding-left: 10px !important;
-  white-space: break-spaces !important;
+  white-space: revert !important;
   padding-right: 50px !important;
 }
 
@@ -267,6 +268,7 @@ body {
   margin: 0px 30px;
   text-align: center;
   font-weight: 500;
+  position: relative;
 }
 
 .order-short-info label span {
@@ -274,6 +276,22 @@ body {
   display: block;
   line-height: 5px;
   font-weight: 600;
+}
+
+.order-short-info label.decorate {
+  color: transparent !important;
+  position: relative;
+  margin: 0px 0px;
+}
+
+.order-short-info label.decorate::after {
+  position: absolute;
+  left: 3px;
+  top: 5px;
+  width: 2px;
+  height: 45px;
+  content: " ";
+  background: #c1c1c1;
 }
 
 .shadow-1 {
