--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,7 +3,7 @@ body {
   background-color: #f5f5f5 !important;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  padding-top: 50px;
+  padding-top: 60px;
 }
 
 .container-login {
@@ -594,3 +594,117 @@ body {
       border-radius: 15px;
   }
 }
+
+.mod-rest-container{
+  .cover-pic{
+    .cvr{
+      position: relative;
+      width: 100%;
+      &-main{
+        height: 200px;
+        position: relative;
+        overflow: hidden;
+        .overlay{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.07);
+          left: 0px;
+          top: 0px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .btn-cvr-change{
+            width: 35px;
+            height: 35px;
+            background: #fff;
+            border-radius: 10px;
+            border: 0px;
+            svg{
+              margin-top: -5px;
+            }
+          }
+        }
+      }
+      &-photo{
+        width: 80px;
+        height: 80px;
+        position: relative;
+        border: 3px solid #fff;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-top: -40px;
+        margin-left: 20px;
+        .overlay{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.07);
+          left: 0px;
+          top: 0px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .btn-photo-change{
+            width: 35px;
+            height: 35px;
+            background: #fff;
+            border-radius: 10px;
+            border: 0px;
+            svg{
+              margin-top: -5px;
+            }
+          }
+        }
+        
+      }
+    }
+  }
+}
+
+// Universal Inputs
+.uni-input{
+  background: #FFFFFF;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
+  border-radius: 50px;
+  width: 100%;
+  height: 48px;
+  border: 1px solid #fff;
+  padding-left: 12px;
+  &:focus{
+    border: 1px solid #650ADD;
+    outline: none;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
+  }
+  &.md{
+    height: 75px;
+    border-radius: 50px;
+  }
+}
+
+.cstm-select{
+  .css-yk16xz-control{
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
+    border: 1px solid #fff !important;
+    border-radius: 50px !important;
+    height: 48px !important;
+  }
+  .css-1pahdxg-control{
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
+    border: 1px solid #650ADD !important;
+    border-radius: 50px !important;
+    height: 48px !important;
+  }
+  .css-1okebmr-indicatorSeparator{
+    display: none;
+  }
+  // .css-tlfecz-indicatorContainer{
+  //   background: linear-gradient(45deg, #0BFFFB 0%, #26ABC6 100%) !important;
+  // }
+  .css-6q0nyr-Svg{
+    fill: transparent;
+    background: url(../images/arrow-select.svg)no-repeat;
+    background-position: 0px;
+  }
+}
+// Universal Inputs
