--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -596,6 +596,23 @@ body {
 }
 
 .mod-rest-container{
+  h3{
+    text-align: center;
+    margin-bottom: 30px;
+    font-weight: 600;
+  }
+  label{
+    font-weight: 500;
+    font-size: 14px;
+    margin-left: 5px;
+    text-transform: uppercase;
+  }
+  .cstm-select{
+    margin-bottom: 20px;
+  }
+  .uni-input{
+    margin-bottom: 20px;
+  }
   .cover-pic{
     .cvr{
       position: relative;
@@ -680,9 +697,31 @@ body {
     height: 75px;
     border-radius: 50px;
   }
+  &.tarea{
+    height: 75px;
+    border-radius: 50px;
+    overflow: auto;
+    resize: none;
+    padding-left: 20px;
+  }
 }
-
 .cstm-select{
+  &.mini{
+    .css-yk16xz-control{
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
+      border: 1px solid #fff !important;
+      border-radius: 50px !important;
+      height: 35px !important;
+      width: 100px;
+    }
+    .css-1pahdxg-control{
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
+      border: 1px solid #650ADD !important;
+      border-radius: 50px !important;
+      height: 35px !important;
+      width: 100px;
+    }
+  }
   .css-yk16xz-control{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
     border: 1px solid #fff !important;
@@ -707,4 +746,49 @@ body {
     background-position: 0px;
   }
 }
+
+.oc-checkbox{
+  display: inline-block;
+  .icon{
+    width: 20px !important;
+    svg{
+      border: 0px !important;
+      border-radius: 6px;
+      background: transparent !important;
+      color: transparent !important;
+      box-shadow: 0px 0px 0px 2px #c1c1c1;
+      path{
+        transform: scale(0.5);
+        transform-origin: center;
+      }
+    }
+  }
+  &.checked{
+    svg{
+      color: #fff !important;
+      background: linear-gradient(180deg, #B40DFF 0%, #650ADD 100%) !important;
+    }
+  }
+}
 // Universal Inputs
+
+.hor-inline{
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 4px;
+  .chk-label{
+    font-size: 12px;
+    margin-left:22px;
+  }
+  .time-block{
+    width:220px;
+    float: right;
+    margin-top: 3px;
+    position: relative;
+    .dash{
+      position: absolute;
+      left: 107px;
+      top: 5px;
+    }
+  }
+}
