--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -54,6 +54,26 @@ body {
   outline: none;
 }
 
+.container-login .ls-panel input.user {
+  background: #fff url(../images/user-icon.svg) no-repeat !important;
+  background-position: 15px 13px !important;
+  padding-left: 40px !important;
+}
+
+.container-login .ls-panel input.pass {
+  background: #fff url(../images/eye-grey.svg) no-repeat !important;
+  background-position: 95% 17px !important;
+  padding-left: 40px !important;
+  padding-right: 30px;
+}
+
+.container-login .ls-panel input.pass:focus {
+  background: #fff url(../images/eye-active.svg) no-repeat !important;
+  background-position: 95% 17px !important;
+  padding-left: 40px !important;
+  padding-right: 30px;
+}
+
 .container-login .ls-panel .help-txt {
   font-size: 11px;
   color: #262628;
@@ -114,6 +134,9 @@ body {
   left: 0px;
   top: 0px;
   z-index: 9;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  left: 0;
 }
 
 .sidebar-wrapper .logo-sidebar {
@@ -166,7 +189,7 @@ body {
 }
 
 .sidebar-wrapper.collapsed {
-  left: -330px;
+  left: -340px;
 }
 
 .wrapper {
@@ -1052,6 +1075,45 @@ body {
   display: none;
 }
 
+.mb-total-view {
+  background: -webkit-gradient(linear, left top, left bottom, from(#B40DFF), to(#650ADD));
+  background: linear-gradient(180deg, #B40DFF 0%, #650ADD 100%);
+  border-radius: 12px;
+  min-height: 50px;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  display: none;
+}
+
+.mb-total-view::after {
+  width: 2px;
+  height: 100%;
+  background: #fff;
+  content: " ";
+  position: absolute;
+  left: 50%;
+  top: 0px;
+}
+
+.mb-total-view label {
+  font-size: 20px;
+  margin-top: 10px !important;
+  line-height: 20px;
+}
+
+.mb-total-view label span {
+  display: block;
+  font-size: 18px;
+}
+
+.menu-dots {
+  position: absolute;
+  right: 15px;
+  top: 18px;
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) {
   .wrapper {
     padding-left: 0px;
@@ -1072,14 +1134,41 @@ body {
     display: block;
   }
   .extra-space {
-    min-height: 15px;
-    padding: 30px;
+    min-height: 100px;
+    padding: 25px;
+    background: #fff;
   }
   .extra-space .dropdown-toggle::after {
     display: none;
   }
+  .extra-space .cstm-drop {
+    margin-top: 5px;
+  }
   .sidebar-wrapper {
     z-index: 99;
+    background: #f5f5f5;
+    -webkit-box-shadow: 0px 0px 10px #bdbdbd;
+            box-shadow: 0px 0px 10px #bdbdbd;
+  }
+  .sidebar-wrapper .menu-list {
+    margin-top: 20px;
+  }
+  .sidebar-wrapper .menu-list a {
+    border-left: 0px;
+  }
+  .container-login {
+    width: 90%;
+    margin: 20% auto;
+  }
+  .container-login .ls-panel {
+    padding: 30px 25px;
+  }
+  .tab-cstm div.nav-item a {
+    font-size: 14px;
+    padding: 2px 10px !important;
+  }
+  .mb-total-view {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
