--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -43,6 +43,23 @@ body {
         border: 1px solid #37dbe4;
         outline: none;
       }
+      &.user{
+        background: #fff url(../images/user-icon.svg)no-repeat !important;
+        background-position: 15px 13px !important;
+        padding-left: 40px !important;
+      }
+      &.pass{
+        background: #fff url(../images/eye-grey.svg)no-repeat !important;
+        background-position: 95% 17px!important;
+        padding-left: 40px !important;
+        padding-right: 30px;
+        &:focus{
+          background: #fff url(../images/eye-active.svg)no-repeat !important;
+          background-position: 95% 17px!important;
+          padding-left: 40px !important;
+          padding-right: 30px;
+        }
+      }
     }
     .help-txt {
       font-size: 11px;
@@ -111,6 +128,8 @@ body {
   left: 0px;
   top: 0px;
   z-index: 9;
+  transition: 0.4s;
+  left: 0;
   .logo-sidebar {
     margin-top: 35px;
     margin-left: 30px;
@@ -157,7 +176,7 @@ body {
     }
   }
   &.collapsed{
-    left: -330px;
+    left: -340px;
     // box-shadow: 2px 0px 10px #d8d8d8;
   }
 }
@@ -927,6 +946,41 @@ body {
   display: none;
 }
 
+.mb-total-view{
+  background: linear-gradient(180deg, #B40DFF 0%, #650ADD 100%);
+  border-radius: 12px;
+  min-height: 50px;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  display: none;
+  &::after{
+    width: 2px;
+    height: 100%;
+    background: #fff;
+    content: " ";
+    position: absolute;
+    left: 50%;
+    top: 0px;
+  }
+  label{
+    font-size: 20px;
+    margin-top: 10px !important;
+    line-height: 20px;
+    span{
+      display: block;
+      font-size: 18px;
+    }
+  }
+}
+
+.menu-dots{
+  position: absolute;
+  right: 15px;
+  top: 18px;
+}
+
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 768px) { 
@@ -949,15 +1003,45 @@ body {
       display: block;
     }
     .extra-space{
-      min-height: 15px;
-      padding: 30px;
+      min-height: 100px;
+      padding: 25px;
+      background: #fff;
       .dropdown-toggle{
         &::after{
           display: none;
         }
       }
+      .cstm-drop{
+        margin-top: 5px;
+      }
     }
     .sidebar-wrapper{
       z-index: 99;
+      background: #f5f5f5;
+      box-shadow: 0px 0px 10px #bdbdbd;
+      .menu-list{
+        margin-top: 20px;
+        a{
+          border-left: 0px;
+        }
+      }
+    }
+    .container-login{
+      width: 90%;
+      margin: 20% auto;
+      .ls-panel{
+        padding: 30px 25px;
+      }
+    }
+    .tab-cstm{
+      div.nav-item{
+        a{
+          font-size: 14px;
+          padding: 2px 10px !important;
+        }
+      }
+    }
+    .mb-total-view{
+      display: block;
     }
 }
